Prepared a notebook for postprocessor

--- a/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_student_performance/Student_Performance_Por_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_student_performance/Student_Performance_Por_Batch1.ipynb
@@ -147,7 +147,7 @@
     "from configs.constants import TEST_SET_FRACTION, EXPERIMENT_SEEDS\n",
     "from configs.models_config_for_tuning import get_folktables_employment_models_params_for_tuning\n",
     "\n",
-    "from source.experiment_interface import run_exp_iter_with_LFR"
+    "from source.experiment_interface import run_exp_iter_with_eq_odds"
    ]
   },
   {
@@ -175,10 +175,10 @@
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIR_INTERVENTION_PARAMS_LST = [True]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
-    "                                     'EqOdds_student_performance', EXPERIMENT_NAME)\n",
+    "                                     'EqOddsPostprocessing', EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
-    "                                'EqOdds_student_performance', EXPERIMENT_NAME, 'student_performance_por_config.yaml')\n",
+    "                                'EqOddsPostprocessing', EXPERIMENT_NAME, 'student_performance_por_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
    ]
   },
@@ -490,20 +490,20 @@
     }
    ],
    "source": [
-    "run_exp_iter_with_LFR(data_loader=exp_iter_data_loader,\n",
-    "                      experiment_seed=experiment_seed,\n",
-    "                      test_set_fraction=TEST_SET_FRACTION,\n",
-    "                      db_writer_func=db_writer_func,\n",
-    "                      fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
-    "                      models_params_for_tuning=models_params_for_tuning,\n",
-    "                      metrics_computation_config=metrics_computation_config,\n",
-    "                      custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                      with_tuning=True,\n",
-    "                      # with_tuning=False,\n",
-    "                      # tuned_params_df_paths=tuned_params_df_paths,\n",
-    "                      save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                      dataset_name='StudentPerformancePortugueseDataset',\n",
-    "                      verbose=True)"
+    "run_exp_iter_with_eq_odds(data_loader=exp_iter_data_loader,\n",
+    "                          experiment_seed=experiment_seed,\n",
+    "                          test_set_fraction=TEST_SET_FRACTION,\n",
+    "                          db_writer_func=db_writer_func,\n",
+    "                          fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
+    "                          models_params_for_tuning=models_params_for_tuning,\n",
+    "                          metrics_computation_config=metrics_computation_config,\n",
+    "                          custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                          with_tuning=True,\n",
+    "                          # with_tuning=False,\n",
+    "                          # tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                          save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                          dataset_name='StudentPerformancePortugueseDataset',\n",
+    "                          verbose=True)"
    ]
   },
   {
@@ -525,10 +525,9 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Student_Performance_Por_20240102__190652.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
-    "                                      'EqOdds_student_performance', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                                      'EqOddsPostprocessing', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -548,20 +547,20 @@
    },
    "outputs": [],
    "source": [
-    "run_exp_iter_with_LFR(data_loader=exp_iter_data_loader,\n",
-    "                      experiment_seed=experiment_seed,\n",
-    "                      test_set_fraction=TEST_SET_FRACTION,\n",
-    "                      db_writer_func=db_writer_func,\n",
-    "                      fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
-    "                      models_params_for_tuning=models_params_for_tuning,\n",
-    "                      metrics_computation_config=metrics_computation_config,\n",
-    "                      custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                      # with_tuning=True,\n",
-    "                      with_tuning=False,\n",
-    "                      tuned_params_df_paths=tuned_params_df_paths,\n",
-    "                      save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                      dataset_name='StudentPerformancePortugueseDataset',\n",
-    "                      verbose=True)"
+    "run_exp_iter_with_eq_odds(data_loader=exp_iter_data_loader,\n",
+    "                          experiment_seed=experiment_seed,\n",
+    "                          test_set_fraction=TEST_SET_FRACTION,\n",
+    "                          db_writer_func=db_writer_func,\n",
+    "                          fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
+    "                          models_params_for_tuning=models_params_for_tuning,\n",
+    "                          metrics_computation_config=metrics_computation_config,\n",
+    "                          custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                          # with_tuning=True,\n",
+    "                          with_tuning=False,\n",
+    "                          tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                          save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                          dataset_name='StudentPerformancePortugueseDataset',\n",
+    "                          verbose=True)"
    ]
   },
   {
@@ -583,10 +582,9 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Student_Performance_Por_20240102__190652.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
-    "                                      'EqOdds_student_performance', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                                      'EqOddsPostprocessing', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -606,20 +604,20 @@
    },
    "outputs": [],
    "source": [
-    "run_exp_iter_with_LFR(data_loader=exp_iter_data_loader,\n",
-    "                      experiment_seed=experiment_seed,\n",
-    "                      test_set_fraction=TEST_SET_FRACTION,\n",
-    "                      db_writer_func=db_writer_func,\n",
-    "                      fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
-    "                      models_params_for_tuning=models_params_for_tuning,\n",
-    "                      metrics_computation_config=metrics_computation_config,\n",
-    "                      custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                      # with_tuning=True,\n",
-    "                      with_tuning=False,\n",
-    "                      tuned_params_df_paths=tuned_params_df_paths,\n",
-    "                      save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                      dataset_name='StudentPerformancePortugueseDataset',\n",
-    "                      verbose=True)"
+    "run_exp_iter_with_eq_odds(data_loader=exp_iter_data_loader,\n",
+    "                          experiment_seed=experiment_seed,\n",
+    "                          test_set_fraction=TEST_SET_FRACTION,\n",
+    "                          db_writer_func=db_writer_func,\n",
+    "                          fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
+    "                          models_params_for_tuning=models_params_for_tuning,\n",
+    "                          metrics_computation_config=metrics_computation_config,\n",
+    "                          custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                          # with_tuning=True,\n",
+    "                          with_tuning=False,\n",
+    "                          tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                          save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                          dataset_name='StudentPerformancePortugueseDataset',\n",
+    "                          verbose=True)"
    ]
   },
   {
@@ -641,10 +639,9 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Student_Performance_Por_20240102__190652.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
-    "                                      'EqOdds_student_performance', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                                      'EqOddsPostprocessing', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -664,20 +661,20 @@
    },
    "outputs": [],
    "source": [
-    "run_exp_iter_with_LFR(data_loader=exp_iter_data_loader,\n",
-    "                      experiment_seed=experiment_seed,\n",
-    "                      test_set_fraction=TEST_SET_FRACTION,\n",
-    "                      db_writer_func=db_writer_func,\n",
-    "                      fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
-    "                      models_params_for_tuning=models_params_for_tuning,\n",
-    "                      metrics_computation_config=metrics_computation_config,\n",
-    "                      custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                      # with_tuning=True,\n",
-    "                      with_tuning=False,\n",
-    "                      tuned_params_df_paths=tuned_params_df_paths,\n",
-    "                      save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                      dataset_name='StudentPerformancePortugueseDataset',\n",
-    "                      verbose=True)"
+    "run_exp_iter_with_eq_odds(data_loader=exp_iter_data_loader,\n",
+    "                          experiment_seed=experiment_seed,\n",
+    "                          test_set_fraction=TEST_SET_FRACTION,\n",
+    "                          db_writer_func=db_writer_func,\n",
+    "                          fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
+    "                          models_params_for_tuning=models_params_for_tuning,\n",
+    "                          metrics_computation_config=metrics_computation_config,\n",
+    "                          custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                          # with_tuning=True,\n",
+    "                          with_tuning=False,\n",
+    "                          tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                          save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                          dataset_name='StudentPerformancePortugueseDataset',\n",
+    "                          verbose=True)"
    ]
   },
   {
@@ -699,10 +696,9 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Student_Performance_Por_20240102__190652.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
-    "                                      'EqOdds_student_performance', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                                      'EqOddsPostprocessing', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -722,20 +718,20 @@
    },
    "outputs": [],
    "source": [
-    "run_exp_iter_with_LFR(data_loader=exp_iter_data_loader,\n",
-    "                      experiment_seed=experiment_seed,\n",
-    "                      test_set_fraction=TEST_SET_FRACTION,\n",
-    "                      db_writer_func=db_writer_func,\n",
-    "                      fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
-    "                      models_params_for_tuning=models_params_for_tuning,\n",
-    "                      metrics_computation_config=metrics_computation_config,\n",
-    "                      custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                      # with_tuning=True,\n",
-    "                      with_tuning=False,\n",
-    "                      tuned_params_df_paths=tuned_params_df_paths,\n",
-    "                      save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                      dataset_name='StudentPerformancePortugueseDataset',\n",
-    "                      verbose=True)"
+    "run_exp_iter_with_eq_odds(data_loader=exp_iter_data_loader,\n",
+    "                          experiment_seed=experiment_seed,\n",
+    "                          test_set_fraction=TEST_SET_FRACTION,\n",
+    "                          db_writer_func=db_writer_func,\n",
+    "                          fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
+    "                          models_params_for_tuning=models_params_for_tuning,\n",
+    "                          metrics_computation_config=metrics_computation_config,\n",
+    "                          custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                          # with_tuning=True,\n",
+    "                          with_tuning=False,\n",
+    "                          tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                          save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                          dataset_name='StudentPerformancePortugueseDataset',\n",
+    "                          verbose=True)"
    ]
   },
   {
@@ -757,10 +753,9 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Student_Performance_Por_20240102__190652.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
-    "                                      'EqOdds_student_performance', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                                      'EqOddsPostprocessing', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -780,20 +775,20 @@
    },
    "outputs": [],
    "source": [
-    "run_exp_iter_with_LFR(data_loader=exp_iter_data_loader,\n",
-    "                      experiment_seed=experiment_seed,\n",
-    "                      test_set_fraction=TEST_SET_FRACTION,\n",
-    "                      db_writer_func=db_writer_func,\n",
-    "                      fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
-    "                      models_params_for_tuning=models_params_for_tuning,\n",
-    "                      metrics_computation_config=metrics_computation_config,\n",
-    "                      custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                      # with_tuning=True,\n",
-    "                      with_tuning=False,\n",
-    "                      tuned_params_df_paths=tuned_params_df_paths,\n",
-    "                      save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                      dataset_name='StudentPerformancePortugueseDataset',\n",
-    "                      verbose=True)"
+    "run_exp_iter_with_eq_odds(data_loader=exp_iter_data_loader,\n",
+    "                          experiment_seed=experiment_seed,\n",
+    "                          test_set_fraction=TEST_SET_FRACTION,\n",
+    "                          db_writer_func=db_writer_func,\n",
+    "                          fair_intervention_params_lst=FAIR_INTERVENTION_PARAMS_LST,\n",
+    "                          models_params_for_tuning=models_params_for_tuning,\n",
+    "                          metrics_computation_config=metrics_computation_config,\n",
+    "                          custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                          # with_tuning=True,\n",
+    "                          with_tuning=False,\n",
+    "                          tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                          save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                          dataset_name='StudentPerformancePortugueseDataset',\n",
+    "                          verbose=True)"
    ]
   },
   {
