Prepared a notebook with EqOdds for ACS PubCov

--- a/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_acs_pubcov/ACS_PubCov_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_acs_pubcov/ACS_PubCov_Batch1.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "5c68611c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-03T22:06:47.913158Z",
-     "start_time": "2024-01-03T22:06:47.899893Z"
+     "end_time": "2024-01-03T23:35:19.738404Z",
+     "start_time": "2024-01-03T23:35:19.714471Z"
     }
    },
    "outputs": [],
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "789a9330",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-03T22:07:04.695699Z",
-     "start_time": "2024-01-03T22:07:04.683807Z"
+     "end_time": "2024-01-03T23:35:37.942410Z",
+     "start_time": "2024-01-03T23:35:37.150139Z"
     }
    },
    "outputs": [],
@@ -259,8 +259,8 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    # 'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': '469acf0e-449a-4569-ada2-aceb6ed6f3df',\n",
+    "    'session_uuid': str(uuid.uuid4()),\n",
+    "    # 'session_uuid': '469acf0e-449a-4569-ada2-aceb6ed6f3df',\n",
     "    # 'session_uuid': 'c700e431-88bf-4aba-857c-74c5784d6065',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
