Prepared a notebook with EqOdds for Law School

--- a/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_law_school/Law_School_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_law_school/Law_School_Batch1.ipynb
@@ -259,8 +259,8 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    # 'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': '9750a063-e9d0-4d32-bdc6-5ba735602c1c',\n",
+    "    'session_uuid': str(uuid.uuid4()),\n",
+    "    # 'session_uuid': '9750a063-e9d0-4d32-bdc6-5ba735602c1c',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
