--- a/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_acs_income/ACS_Income_Batch1-Copy5.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_acs_income/ACS_Income_Batch1-Copy5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "25ded8f4",
+   "id": "37b539c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e79c2fa8",
+   "id": "cd863d59",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1314ffc8",
+   "id": "c55bf18c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "40d5af4a",
+   "id": "db758778",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:23.380028Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01967eee",
+   "id": "899bd9dd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:23.389626Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0b1ec197",
+   "id": "1354ca5a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:23.406917Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e44ea9eb",
+   "id": "7577cecb",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a7e66455",
+   "id": "7c2b4aa1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:24.699501Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bf2d188",
+   "id": "e7599686",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "af095fbb",
+   "id": "898a2424",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:24.720275Z",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaba9701",
+   "id": "6f0d7c24",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f6f39c93",
+   "id": "179c33c8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:24.768109Z",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "275b13bf",
+   "id": "4eeea055",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:26.212014Z",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dd2ee4f3",
+   "id": "32ed8c81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:35.650149Z",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62f744e",
+   "id": "d202e5c3",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5572bba8",
+   "id": "fd3cb566",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:38.918427Z",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6f5ced20",
+   "id": "38e686e5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:38.958244Z",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f3a3fc",
+   "id": "147c40e5",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b806a189",
+   "id": "0da38bda",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3919f231",
+   "id": "6e6a951a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:39.475868Z",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a45f6c1a",
+   "id": "9420c800",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:54:40.470685Z",
@@ -491,14 +491,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6c583619",
+   "id": "dc4dc5ed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:58:33.046422Z",
@@ -510,7 +510,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 09:07:17 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-04 09:09:52 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -530,7 +530,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7864d7879cfe4ad1a879e0fead00d3b6",
+       "model_id": "35d4ebcd1def46a591b9e30f9060c180",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,9 +552,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 09:07:18 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-04 09:09:52 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 09:07:18 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-04 09:09:52 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -579,13 +579,13 @@
       "             8665,  6253],\n",
       "           dtype='int64')\n",
       "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_acs_income/tuning_results_Folktables_GA_2018_Income_20240104__100612.csv\n",
-      "LogisticRegression:  {'C': 1, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 1000, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l1', 'random_state': 100, 'solver': 'saga', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n"
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 80, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 100, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2aa31eaf95d341b584ecb9c081ac20dc",
+       "model_id": "e85e01f929564dbcbfccd7f043bbbe0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -606,7 +606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cda48fe56e644fa8a50ab690c4b6cea",
+       "model_id": "ec16c5581feb4e0d92e20aa047ffc55a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba2d569",
+   "id": "33d7bcf7",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "afecd162",
+   "id": "47b27997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,14 +664,14 @@
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)\n",
     "models_params_for_tuning = {\n",
-    "    'LogisticRegression': models_params_for_tuning['LogisticRegression']\n",
+    "    'RandomForestClassifier': models_params_for_tuning['RandomForestClassifier']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fb81c8e9",
+   "id": "9fd52f6e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -683,7 +683,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 10:31:24 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-04 10:41:02 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -703,7 +703,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c3601f857f3493c958d73dccc658147",
+       "model_id": "d53e32828437450b95fefd64eca6c65f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -725,9 +725,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 10:31:24 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-04 10:41:02 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 10:31:24 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-04 10:41:02 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -752,13 +752,13 @@
       "            10244, 13775],\n",
       "           dtype='int64')\n",
       "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_acs_income/tuning_results_Folktables_GA_2018_Income_20240104__100612.csv\n",
-      "LogisticRegression:  {'C': 1, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 1000, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l1', 'random_state': 200, 'solver': 'saga', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n"
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 80, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 200, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4876a6b4ef4c465eac4344bfb1130e08",
+       "model_id": "1e27a425ecf2420bb44b5c6c8030a748",
        "version_major": 2,
        "version_minor": 0
       },
@@ -779,7 +779,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb0ab52dcbff41fdb4416db930de79ad",
+       "model_id": "f304a12245d64b56a8e650a92f244b09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68bf3c64",
+   "id": "0cb54819",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c483d693",
+   "id": "a97d8bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11cfcb34",
+   "id": "0c4d625e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae7ee956",
+   "id": "ee883b61",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fafc6583",
+   "id": "2eaf9f78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a822592c",
+   "id": "6b4e01f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1a8ddc5",
+   "id": "25a7ffa1",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "64624e9d",
+   "id": "face589b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93846b17",
+   "id": "ec3c1b45",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad99405b",
+   "id": "905b0df4",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2803188f",
+   "id": "3437cc4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fadd1401",
+   "id": "0d005d1c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cac8c17",
+   "id": "39b05b84",
    "metadata": {},
    "outputs": [],
    "source": []
