--- a/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_student_performance/Student_Performance_Por_Batch2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_student_performance/Student_Performance_Por_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "468cd289",
+   "id": "6968b88c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9f54cfa0",
+   "id": "872a3555",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f2d81922",
+   "id": "badd0776",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0d1f4d76",
+   "id": "1105a8e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:21:54.366546Z",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6c429132",
+   "id": "1acb254a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:21:54.380520Z",
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "02f4ed04",
+   "id": "b20d4344",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:21:54.386496Z",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1296aad0",
+   "id": "c53448a0",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4fba3ddd",
+   "id": "bbff88fe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:21:55.605484Z",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45450b8f",
+   "id": "d15a49f4",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b5ab0aab",
+   "id": "9c703e5b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:21:56.244694Z",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4011d0a",
+   "id": "d19a8a1b",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b0248d33",
+   "id": "8e07047e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:21:56.478987Z",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6f48368a",
+   "id": "ce1febb4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:21:57.549952Z",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ec4d77e1",
+   "id": "80f056a2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:22:06.835666Z",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "795ad90d",
+   "id": "2432e24b",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "43d1968e",
+   "id": "4232d6b7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:22:08.355638Z",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f861ae55",
+   "id": "ad861a7a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:22:08.481012Z",
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd8b1f5",
+   "id": "06e5682e",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07dd620a",
+   "id": "1e40a2c9",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9d8813c4",
+   "id": "6ff9bd22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:22:10.543776Z",
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9688c949",
+   "id": "64c9f88e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:22:10.752741Z",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c45b8960",
+   "id": "5a42567c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:22:37.609524Z",
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03df5db1",
+   "id": "9c8f27bd",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6bca6d3b",
+   "id": "4053a2c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1c9c2266",
+   "id": "26d6d2a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c7d2dab",
+   "id": "64704351",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ac5c233c",
+   "id": "1bc10e54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6f053de0",
+   "id": "b402c2ff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c951130",
+   "id": "0aebe3f2",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e79061f6",
+   "id": "40d359dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,8 +1107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6bd548b0",
+   "execution_count": 22,
+   "id": "3df0adba",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04b50ed8",
+   "id": "733ecb2c",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1258,8 +1258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f28a90ca",
+   "execution_count": 23,
+   "id": "2b3c3215",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,15 +1280,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "74ef37c8",
+   "execution_count": 24,
+   "id": "ed3311c1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
      "start_time": "2024-01-03T22:18:29.045886Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-04 06:53:30 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "INFO:root:Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 500,\n",
+      " 'experiment_iteration': 'Exp_iter_5',\n",
+      " 'fair_intervention_params_lst': '[True]',\n",
+      " 'intervention_param': 'True',\n",
+      " 'model_init_seed': 500,\n",
+      " 'session_uuid': 'b35e31f2-bb03-494f-a24c-b9264e383667'}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "280ff454624546df949e33632cb5fc03",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-04 06:53:30 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n",
+      "2024-01-04 06:53:30 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_options:  True\n",
+      "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__school_GP', 'cat__school_MS', 'cat__address_R', 'cat__address_U',\n",
+      "       'cat__famsize_GT3', 'cat__famsize_LE3', 'cat__Pstatus_A',\n",
+      "       'cat__Pstatus_T', 'cat__Mjob_at_home', 'cat__Mjob_health',\n",
+      "       'cat__Mjob_other', 'cat__Mjob_services', 'cat__Mjob_teacher',\n",
+      "       'cat__Fjob_at_home', 'cat__Fjob_health', 'cat__Fjob_other',\n",
+      "       'cat__Fjob_services', 'cat__Fjob_teacher', 'cat__reason_course',\n",
+      "       'cat__reason_home', 'cat__reason_other', 'cat__reason_reputation',\n",
+      "       'cat__guardian_father', 'cat__guardian_mother', 'cat__guardian_other',\n",
+      "       'cat__schoolsup_no', 'cat__schoolsup_yes', 'cat__famsup_no',\n",
+      "       'cat__famsup_yes', 'cat__paid_no', 'cat__paid_yes',\n",
+      "       'cat__activities_no', 'cat__activities_yes', 'cat__nursery_no',\n",
+      "       'cat__nursery_yes', 'cat__higher_no', 'cat__higher_yes',\n",
+      "       'cat__internet_no', 'cat__internet_yes', 'cat__romantic_no',\n",
+      "       'cat__romantic_yes', 'num__age', 'num__Medu', 'num__Fedu',\n",
+      "       'num__traveltime', 'num__studytime', 'num__failures', 'num__famrel',\n",
+      "       'num__freetime', 'num__goout', 'num__Dalc', 'num__Walc', 'num__health',\n",
+      "       'num__absences', 'num__G1', 'num__G2', 'sex_binary'],\n",
+      "      dtype='object')\n",
+      "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 92, 640, 589, 519, 377, 478, 298, 336, 149, 278, 343, 573, 365,\n",
+      "            174, 171, 219, 469, 162, 567, 203],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in the current base flow dataset:  Int64Index([ 92, 640, 589, 519, 377, 478, 298, 336, 149, 278, 343, 573, 365,\n",
+      "            174, 171, 219, 469, 162, 567, 203],\n",
+      "           dtype='int64')\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_student_performance/tuning_results_Student_Performance_Por_20240104__111430.csv\n",
+      "MLPClassifier:  {'activation': 'relu', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 500, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e01f1d606f2b43d698a979c8e65fd4ba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabled a postprocessing mode\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee365c01ca9248bf81a4477ef7315f77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exp_iter_with_eq_odds(data_loader=exp_iter_data_loader,\n",
     "                          experiment_seed=experiment_seed,\n",
@@ -1308,7 +1423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44dd3837",
+   "id": "a8f45592",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1316,8 +1431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b54ef59e",
+   "execution_count": 25,
+   "id": "962db185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,15 +1453,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7da4d57f",
+   "execution_count": 26,
+   "id": "93a4e1de",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
      "start_time": "2024-01-03T22:18:33.433760Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-04 07:03:48 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "INFO:root:Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 600,\n",
+      " 'experiment_iteration': 'Exp_iter_6',\n",
+      " 'fair_intervention_params_lst': '[True]',\n",
+      " 'intervention_param': 'True',\n",
+      " 'model_init_seed': 600,\n",
+      " 'session_uuid': 'b35e31f2-bb03-494f-a24c-b9264e383667'}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "398a86587da74677921a4976f8b01253",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-04 07:03:48 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n",
+      "2024-01-04 07:03:48 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_options:  True\n",
+      "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__school_GP', 'cat__school_MS', 'cat__address_R', 'cat__address_U',\n",
+      "       'cat__famsize_GT3', 'cat__famsize_LE3', 'cat__Pstatus_A',\n",
+      "       'cat__Pstatus_T', 'cat__Mjob_at_home', 'cat__Mjob_health',\n",
+      "       'cat__Mjob_other', 'cat__Mjob_services', 'cat__Mjob_teacher',\n",
+      "       'cat__Fjob_at_home', 'cat__Fjob_health', 'cat__Fjob_other',\n",
+      "       'cat__Fjob_services', 'cat__Fjob_teacher', 'cat__reason_course',\n",
+      "       'cat__reason_home', 'cat__reason_other', 'cat__reason_reputation',\n",
+      "       'cat__guardian_father', 'cat__guardian_mother', 'cat__guardian_other',\n",
+      "       'cat__schoolsup_no', 'cat__schoolsup_yes', 'cat__famsup_no',\n",
+      "       'cat__famsup_yes', 'cat__paid_no', 'cat__paid_yes',\n",
+      "       'cat__activities_no', 'cat__activities_yes', 'cat__nursery_no',\n",
+      "       'cat__nursery_yes', 'cat__higher_no', 'cat__higher_yes',\n",
+      "       'cat__internet_no', 'cat__internet_yes', 'cat__romantic_no',\n",
+      "       'cat__romantic_yes', 'num__age', 'num__Medu', 'num__Fedu',\n",
+      "       'num__traveltime', 'num__studytime', 'num__failures', 'num__famrel',\n",
+      "       'num__freetime', 'num__goout', 'num__Dalc', 'num__Walc', 'num__health',\n",
+      "       'num__absences', 'num__G1', 'num__G2', 'sex_binary'],\n",
+      "      dtype='object')\n",
+      "Top indexes of an X_test in the current base flow dataset:  Int64Index([390, 397, 375, 507, 625, 369, 245, 428, 593, 102,  49, 621,  92,\n",
+      "            158, 505, 612,  29, 452,  56, 145],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in the current base flow dataset:  Int64Index([390, 397, 375, 507, 625, 369, 245, 428, 593, 102,  49, 621,  92,\n",
+      "            158, 505, 612,  29, 452,  56, 145],\n",
+      "           dtype='int64')\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/EqOddsPostprocessing/EqOdds_student_performance/tuning_results_Student_Performance_Por_20240104__111430.csv\n",
+      "MLPClassifier:  {'activation': 'relu', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 600, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57ccba1b29814ce39d69d3a66ad3725f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabled a postprocessing mode\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b1d4352beb54344aecc57d5c2330ef4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exp_iter_with_eq_odds(data_loader=exp_iter_data_loader,\n",
     "                          experiment_seed=experiment_seed,\n",
@@ -1367,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74840978",
+   "id": "16151078",
    "metadata": {},
    "outputs": [],
    "source": []
